// Conversion List
"conversation_list_empty_state_label" = "No conversations";
"conversation_list_last_message_yesterday" = "Yesterday";
"conversation_list_button_retry" = "Retry";
"conversation_list_load_error_label" = "An error occurred while loading the conversations, please try again.";

// Inbox
"inbox_title" = "Medical Chat";
"inbox_error_alert_title" = "Error";
"inbox_error_alert_cancel_action_title" = "Cancel";
"inbox_error_failed_to_create_conversation_message" = "Failed to create conversation: %@";

// Conversation
"conversation_composer_placeholder" = "Type your message";
"conversation_action_copy_message" = "Copy";
"conversation_action_delete_message" = "Delete";
"conversation_action_reply_to" = "Reply to";
"conversation_deleted_message" = "Deleted message";
"conversation_message_deleted_sender" = "Deleted";
"conversation_message_system_sender" = "System";
"conversation_message_unknown_sender" = "Unknown user";
"conversation_add_media_camera" = "Camera";
"conversation_add_media_library" = "Photo & video Library";
"conversation_add_media_scan_document" = "Scan document";
"conversation_add_media_scan_document_filename" = "%@ scan.pdf";
"conversation_add_media_document" = "Document";
"conversation_add_media_cancel" = "Cancel";
"conversation_load_error_label" = "An error occurred while loading the messages, please try again.";
"conversation_load_more_error_title" = "Error";
"conversation_load_more_error_message" = "An error occurred while loading the messages.";
"conversation_load_more_error_alert_action" = "OK";
"conversation_delete_message_error_title" = "Error";
"conversation_delete_message_error_message" = "An error occurred while deleting the message, please try again.";
"conversation_delete_message_error_alert_action" = "OK";
"conversation_message_status_sending" = "Sending…";
"conversation_message_status_sent" = "Sent";
"conversation_message_status_failed" = "Failed to send, tap to try again…";
"conversation_date_separator_date_time" = "%@ at %@";
"conversation_date_separator_date_today" = "Today";
"conversation_date_separator_date_yesterday" = "Yesterday";
"conversation_provider_joined" = "%@ has joined the conversation";
"conversation_reply_to_author" = "Replying to %@";
"conversation_reply_to_author_you" = "you";
"conversation_reply_to_author_deleted_provider" = "[Deleted provider]";
"conversation_reply_to_author_unknown_author" = "unknown";
"conversation_reply_to_preview_picture" = "Picture";
"conversation_reply_to_preview_audio" = "Audio";
"conversation_reply_to_preview_document" = "Document";
"conversation_reply_to_preview_video" = "Video";
"conversation_reply_to_preview_unknown" = "Preview";

// Provider
"provider_deleted_name" = "[Deleted provider]";

// Video Call Action Request
"video_call_action_request_title" = "Remote consultation";
"video_call_action_request_button_default" = "Join the call";
"video_call_action_request_button_in_progress" = "Return to call";
"video_call_action_request_button_closed" = "Ended";
